[package]
name = "fxdb"
version = "0.1.0"
authors = ["pnyda5693 <70046757+pnyda5693@users.noreply.github.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.5", features = ["extras", "postgres"] }
chrono = "0.4.15"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde_json = "1.0.57"